--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .main-nav{
-    @apply bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900 p-3 mb-3 fixed w-full z-50 shadow-indigo-500/40 shadow-md left-0 top-0;
+    @apply z-50 bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900 p-3 mb-3 fixed w-full shadow-indigo-500/40 shadow-md left-0 top-0;
 }
 .smallText-tp{
     @apply text-xs font-semibold text-white;
