--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,8 @@
 @tailwind utilities;
 
 .main-nav{
-    @apply z-50 bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900 p-3 mb-3 fixed w-full shadow-indigo-500/40 shadow-md left-0 top-0;
+    @apply z-50 p-3 mt-[10px] fixed w-full left-0 top-0;
+    /* bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900  shadow-indigo-500/40 shadow-md */
 }
 .smallText-tp{
     @apply text-xs font-semibold text-white;
@@ -13,14 +14,13 @@
 }
 
 .nav-text{
-    @apply inline-block font-extrabold text-base text-slate-300 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
+    @apply inline-block font-extrabold text-base text-slate-400 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
     font-family: 'Ubuntu', sans-serif;
     transition: border-color 0.3s ease, opacity 0.3s ease, transform 0.2s ease;
 }
 
 .nav-text:hover{
-    @apply hover:text-slate-50;
-    border-color: white;
+    @apply hover:text-slate-200 border-gray-200;
     transform: scale(1.03);
 }
 
