--- a/src/App.css
+++ b/src/App.css
@@ -2,54 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body{
-    @apply bg-gradient-to-b from-slate-900 via-slate-700 to-slate-900 p-3 bg-cover bg-fixed min-h-screen;
-} */
+body{
+    @apply overflow-x-hidden;
+}
 
-.section1{
-    @apply bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-center bg-cover -mt-[80px];
+.section1 {
+    @apply min-h-screen bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-center bg-cover overflow-hidden;
+    background-attachment: scroll;
 }
 
 .section2{
-    @apply bg-gradient-to-b from-[#141414] to-[#141c14] bg-no-repeat bg-center bg-cover
+    @apply bg-gradient-to-b from-[#020202] via-[#050505] to-[#141414] w-full;
 }
 
 .web-topic{
-    @apply text-white cursor-default select-none;
+    @apply text-white cursor-default select-none mt-10;
     font-family: 'Ubuntu', sans-serif;
 }
 
-.topicText{
-    @apply block;
+.topicText {
+    @apply block text-[120px] font-light leading-[120px];
 }
-
+.subText{
+    @apply text-lg font-extralight mt-6;
+    font-family: 'Kanit', sans-serif;
+}
 .linkText{
-    @apply text-base underline-offset-1 inline-block cursor-pointer duration-500 text-white/60;
-}
-.linkText:hover{
-    @apply text-white underline shadow-md shadow-indigo-500/40;
+    @apply text-base inline-block cursor-pointer duration-500 text-white/60 underline-offset-[5px] mt-3;
 }
 
-@keyframes borderAnimation {
-    0% {
-        border-color: rgba(17, 9, 48, 0.378); 
-    }
-    25% {
-        border-color: rgb(22, 22, 66); 
-    }
-    50% {
-        border-color: rgb(56, 44, 84); 
-    }
-    75% {
-        border-color: rgb(22, 22, 66); 
-    }
-    100% {
-        border-color: rgba(17, 9, 48, 0.378); 
-    }
-  }
+.linkText:hover{
+    @apply text-white underline drop-shadow-xl shadow-white;
+}
   
-  footer {
-    @apply bg-slate-800 w-full h-16 tracking-[50px];
+footer {
+    @apply bg-gradient-to-b from-[#111111] via-[#050505] to-[#070707] w-full h-32 tracking-[50px];
     font-family: 'Kanit', sans-serif;
   }
   
