--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .main-nav{
-    @apply z-50 p-3 mt-[10px] fixed w-full left-0 top-0;
+    @apply z-50 p-3 fixed w-full bg-black/50 overflow-hidden border-white border-opacity-20 backdrop-blur-md;
+    border-bottom-width: 0.1px;
     /* bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900  shadow-indigo-500/40 shadow-md */
 }
+
 .smallText-tp{
     @apply text-xs font-semibold text-white;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ysabeau SC', sans-serif;
 }
 
 .nav-text{
-    @apply inline-block font-extrabold text-base text-slate-400 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
-    font-family: 'Ubuntu', sans-serif;
+    @apply inline-block font-light tracking-[5px] text-base text-slate-200 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
+    font-family: 'Ysabeau SC', sans-serif;
     transition: border-color 0.3s ease, opacity 0.3s ease, transform 0.2s ease;
 }
 
@@ -25,13 +25,13 @@
 }
 
 .logo{
-    @apply size-16 shadow-xl transition-all;
-    transition : transform 0.3s ease, box-shadow 0.3s ease-in-out;
+    @apply max-w-16 max-h-16 w-auto h-auto transition-all;
+    transition : all 0.3s ease;
 }
 
 .logo:hover{
-    @apply -translate-y-1;
-    box-shadow: 0 0 4px 1px rgba(255,255,255,0.2);
+    @apply -translate-y-0.5;
+    filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
 }
 
 #togglelight{
@@ -41,4 +41,24 @@
 
 #togglelight:hover{
     opacity: 1;
+}
+
+.rightnav-ul{
+    @apply flex justify-end items-center ring-offset-1 ring-1 ring-blue-100/20 rounded-xl
+}
+
+.rightnav-li{
+    @apply flex justify-center items-center p-3
+}
+
+.rightnav-text{
+    @apply smallText-tp cursor-default
+}
+
+.rightnav-img{
+    @apply h-7 w-auto cursor-pointer opacity-40 pl-2
+}
+
+.rightnav-lang{
+    @apply mb-0.5 mr-5 border-gray-700 border-2 px-2 pb-1 rounded-lg hover:border-gray-200 duration-200 cursor-pointer
 }
