--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,18 +3,13 @@
 @tailwind utilities;
 
 .main-nav{
-    @apply z-50 p-3 fixed w-full bg-black/50 overflow-hidden border-white border-opacity-20 backdrop-blur-md;
+    @apply z-50 p-3 fixed w-full bg-black/50 overflow-hidden border-white border-opacity-20 backdrop-blur-sm;
     border-bottom-width: 0.1px;
     /* bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900  shadow-indigo-500/40 shadow-md */
 }
 
-.smallText-tp{
-    @apply text-xs font-semibold text-white;
-    font-family: 'Ysabeau SC', sans-serif;
-}
-
 .nav-text{
-    @apply inline-block font-light tracking-[5px] text-base text-slate-200 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
+    @apply inline-block font-light tracking-[5px] text-[14px] text-slate-200 p-2.5 border-2 border-transparent rounded-full cursor-pointer ;
     font-family: 'Ysabeau SC', sans-serif;
     transition: border-color 0.3s ease, opacity 0.3s ease, transform 0.2s ease;
 }
@@ -43,22 +38,34 @@
     opacity: 1;
 }
 
+.rightnav {
+    @apply flex justify-end items-center;   
+}
+
 .rightnav-ul{
-    @apply flex justify-end items-center ring-offset-1 ring-1 ring-blue-100/20 rounded-xl
+    @apply flex justify-around items-center border-white/40 rounded-full border-[0.2px] py-2 px-4 gap-1 w-[220px];
 }
 
 .rightnav-li{
-    @apply flex justify-center items-center p-3
+    @apply flex justify-center items-center gap-3;
 }
 
 .rightnav-text{
-    @apply smallText-tp cursor-default
+    @apply text-sm font-light tracking-wide text-white cursor-default drop-shadow-xl shadow-white;
+    filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
 }
 
 .rightnav-img{
-    @apply h-7 w-auto cursor-pointer opacity-40 pl-2
+    @apply h-7 w-auto cursor-pointer opacity-40;
+    filter: drop-shadow(0 0 3px rgba(255,255,255,0.2));
 }
 
 .rightnav-lang{
-    @apply mb-0.5 mr-5 border-gray-700 border-2 px-2 pb-1 rounded-lg hover:border-gray-200 duration-200 cursor-pointer
+    @apply flex justify-center items-center px-[8px] py-[4px] border-neutral-400 border-[0.6px] rounded-[15px] hover:border-white duration-200 cursor-pointer; 
+}
+
+.rightnav-lang-text{
+    @apply text-sm text-white font-light hover:font-bold;
+    font-family: 'Ysabeau SC', sans-serif;
+    filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
 }
