--- a/src/components/Position/pos-box.css
+++ b/src/components/Position/pos-box.css
@@ -3,59 +3,5 @@
 @tailwind utilities;
 
 .pos-container {
-    @apply h-[1300px] flex flex-col items-center justify-center -ml-[1000px];
-}
-
-.pos-h1{
-    @apply -mt-[40px] px-4
-}
-.pos-box {
-    @apply h-screen w-[600px] mt-[40px] rounded-2xl border-2 border-gray-800 bg-slate-800/80 p-2;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-}
-
-.pos-ul {
-    @apply bg-gray-800 h-full w-full overflow-y-auto rounded-md p-4;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    scrollbar-gutter: stable both-edges;
-}
-
-.pos-ul::-webkit-scrollbar {
-    width: 10px;
-}
-
-.pos-ul::-webkit-scrollbar-thumb {
-    @apply rounded-[4px] m-[4px] bg-[#6b7280]
-}
-
-.pos-ul::-webkit-scrollbar-track {
-    @apply bg-[#2a3444] rounded-[4px]
-}
-
-.pos-name {
-    @apply p-2 px-10 rounded-2xl text-2xl font-bold bg-gradient-to-tl text-slate-300 border-2 border-sky-100 ml-[20px] shadow-md shadow-slate-400/90;
-    font-family: 'kanit', sans-serif;
-}
-
-.pos-li{
-    @apply bg-gray-700 w-auto p-2 px-5 rounded-xl mb-4 text-white m-4 border-2 border-cyan-700; 
-    @apply flex flex-wrap justify-between items-center;
-    font-family: 'ubuntu',sans-serif;
-}
-
-.pos-li div:hover{
-    
-}
-
-.pos-btn{
-    @apply bg-slate-500/30 p-2 rounded-2xl;
-}
-
-.pos-btn:hover{
-    @apply bg-slate-200/30;
+    @apply min-h-screen bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-center bg-cover overflow-hidden;
 }
