--- a/src/App.css
+++ b/src/App.css
@@ -2,48 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
     @apply overflow-x-hidden;
 }
 
 .section1 {
-    @apply min-h-screen bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-center bg-cover overflow-hidden;
-    background-attachment: scroll;
+  @apply h-screen bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-cover overflow-hidden flex items-center;
+  background-attachment: scroll;
 }
 
-.section2{
-    @apply bg-gradient-to-b from-[#020202] via-[#050505] to-[#141414] w-full ;
+.section2 {
+  @apply bg-gradient-to-b from-[#020202] via-[#050505] to-[#141414] w-full pb-[50px];
 }
 
-.section3{
-    @apply bg-gradient-to-b from-[#141414] via-[#030303] to-[#060606] w-full;
-}
-.topic-animate{
-    animation: slideInLeft 2s;
+.section3 {
+  @apply bg-gradient-to-b from-[#141414] via-[#030303] to-[#060606] w-full;
 }
 
-.web-topic{
-    @apply text-white mt-10;
-    font-family: 'Ubuntu', sans-serif;
+.topic-animate {
+  animation: slideInLeft 2s;
+}
+
+.AppMidText-container{
+  @apply w-screen;
+}
+
+.web-topic {
+  @apply text-white flex flex-col items-center justify-center landscape:mt-16 leading-[50px] md:block md:ml-20 md:-mt-52;
+  @apply xl:-mt-60 xl:ml-40;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .topicText {
-    @apply block text-[120px] font-light leading-[120px];
+  @apply text-[50px] font-light mb-1 md:text-[60px] xl:text-[100px] xl:leading-[120px];
 }
+
 .subText{
-    @apply text-lg font-extralight mt-6;
+    @apply text-sm font-extralight w-[60%] text-center md:text-left md:w-[35%];
+    @apply xl:text-lg xl:w-[30%];
     font-family: 'Kanit', sans-serif;
 }
+
+.subText span{
+    @apply text-white font-light;
+}
+
 .linkText{
-    @apply text-base inline-block cursor-pointer duration-500 text-white/60 underline-offset-[5px] mt-3;
+    @apply text-base inline-block cursor-pointer duration-500 font-light text-neutral-50 underline-offset-[2px] mt-3 sm:landscape:text-black sm:landscape:bg-white/60 sm:landscape:rounded-2xl sm:landscape:px-3 sm:text-center;
 }
 
 .linkText:hover{
-    @apply text-white underline drop-shadow-xl shadow-white;
+    @apply text-white underline sm:landscape:text-neutral-800;
+    filter: drop-shadow(2px 2px 10px #999999);
 }
-  
+
 footer {
-    @apply bg-gradient-to-b from-[#111111] via-[#050505] to-[#070707] w-full h-32 tracking-[50px];
-    font-family: 'Kanit', sans-serif;
-  }
-  
+  @apply bg-[#111111] w-full h-auto py-8 px-4 text-center flex justify-center items-center text-white;
+  font-family: 'Kanit', sans-serif;
+}
