--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,31 +7,33 @@
 
 .main-nav{
     border-bottom-width: 0.1px;
+    @apply p-1 bg-neutral-700;
     /* @apply py-3 fixed w-full bg-[url('https://images.pexels.com/photos/316902/pexels-photo-316902.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')] bg-cover border-white border-opacity-20 backdrop-blur-sm; */
     /* bg-gradient-to-r from-slate-900 via-slate-700 to-slate-900  shadow-indigo-500/40 shadow-md */
 }
 
 .nav-text{
-    @apply inline-block font-light tracking-[5px] text-[10px] text-slate-200 p-2 border-2 border-transparent rounded-full cursor-pointer ;
+    @apply inline-block font-light text-[10px] text-slate-200 p-1 px-2 border-2 border-transparent cursor-pointer ;
     @apply md:text-[14px] md:ml-1;
-    font-family: 'Ysabeau SC', sans-serif;
-    transition: border-color 0.3s ease, opacity 0.3s ease, transform 0.2s ease;
+    font-family: 'Kanit', sans-serif;
+    transition: all 0.3s ease;
 }
 
 .nav-text:hover{
     /* @apply hover:text-slate-200 border-gray-200; */
-    transform: scale(1.03);
+    /* transform: scale(1.03); */
+    @apply bg-neutral-600/80 rounded-xl; 
 }
 
 /* LeftNavbar ----------------------------------------------------------  */
 
 .logo{
-    @apply max-w-8 max-h-8 w-auto h-auto transition-all md:max-w-16 md:max-h-16;
+    @apply max-w-8 max-h-8 w-auto h-auto transition-all md:max-w-10 md:max-h-10;
     transition : all 0.3s ease;
 }
 
 .logo:hover{
-    @apply -translate-y-0.5;
+    @apply scale-105;
     filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
 }
 
@@ -50,15 +52,15 @@
     @apply flex justify-end items-center w-60;  
 }
 
-.rightnav-form{
+/* .rightnav-form{
     @apply w-[80%];
 }
 
 .rightnav-search{
     @apply flex items-center;
-}
+} */
 
-.rightnav-form input[type=text]{
+/* .rightnav-form input[type=text]{
     @apply w-full h-[30px] bg-white/10 text-white border-white/40 border-[0.2px] rounded-[15px] p-2.5 text-[14px];
     font-family: 'Ysabeau SC', sans-serif;
     transition: all 0.2s ease;
@@ -67,9 +69,9 @@
 .rightnav-form input[type=text]:focus{
     @apply border-neutral-50;
     filter: drop-shadow(0 0 3px rgba(255,255,255,0.2));
-}
+} */
 
-.rightnav-search img{
+/* .rightnav-search img{
     @apply w-5 h-5 ml-2 cursor-pointer;
     transition: all 0.3s ease;
     filter: drop-shadow(0 0 3px rgba(255,255,255,0.2));
@@ -77,9 +79,9 @@
 
 .rightnav-search img:hover{
     filter: drop-shadow(0 0 3px rgba(255,255,255,0.8));
-}
+} */
 
-@keyframes clickSearch{
+/* @keyframes clickSearch{
     0%{
         transform: scale(1);
     }
@@ -89,18 +91,18 @@
     100%{
         transform: scale(1);
     }
-}
+} */
 
-.animate-clickSearch {
+/* .animate-clickSearch {
     animation: clickSearch 0.3s ease-in-out;
-}
+} */
 
 .rightnav-li{
     @apply flex items-center gap-1 pl-2;
 }
 
 .rightnav-ul{
-    @apply flex justify-around p-2  ;
+    @apply flex justify-around p-1  ;
     @apply border-white/40 rounded-full border-[0.2px] gap-2;
 }
 
