--- a/src/components/Position/pos-box.css
+++ b/src/components/Position/pos-box.css
@@ -5,3 +5,19 @@
 tbody tr{
     animation: fadeInUp 0.5s;
 }
+
+::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #a5a5a5;
+    border-radius: 4px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #6d6d6d;
+  }
+  ::-webkit-scrollbar-track {
+    background: #181818;
+  }
+  
