bro i just changed all theme to light ;w;

--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,24 @@ body {
   overflow-x: hidden;
 }
 
+/* dark : https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg */
+/* 1: https://images.pexels.com/photos/5712576/pexels-photo-5712576.jpeg */
+/* https://images.pexels.com/photos/8534457/pexels-photo-8534457.jpeg */
+
 .section1 {
-  @apply h-screen w-screen bg-[url('https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg')] bg-no-repeat bg-cover overflow-hidden flex items-center;
+  @apply h-screen w-screen bg-[url('../src/assets/backgroundMain2.jpg')] bg-no-repeat bg-cover bg-center overflow-hidden flex items-center;
   background-attachment: scroll;
+  box-shadow: inset 7px -43px 47px -59px rgba(0,0,0,0.34);
 }
 
 .section2 {
-  @apply bg-gradient-to-b from-[#020202] via-[#050505] to-[#141414] w-full pb-[50px];
+  @apply bg-gradient-to-b from-[#e3e6e9] via-[#e9ecef] to-[#f6f6f6]  w-full pb-[50px];
+  box-shadow: inset 7px 43px 47px -59px rgba(0,0,0,0.34);
 }
 
-.section3 {
+/* .section3 {
   @apply bg-gradient-to-b from-[#141414] via-[#030303] to-[#060606] w-full;
-}
+} */
 
 .topic-animate {
   animation: slideInLeft 2s;
@@ -28,7 +34,7 @@ body {
 }
 
 .web-topic {
-  @apply text-white flex flex-col items-center justify-center landscape:mt-16 leading-[50px] md:block md:ml-20 md:-mt-52;
+  @apply text-neutral-500 flex flex-col items-center justify-center landscape:mt-16 leading-[50px] md:block md:ml-20 md:-mt-52;
   @apply xl:-mt-60 xl:ml-40;
   font-family: 'Ubuntu', sans-serif;
 }
@@ -44,7 +50,7 @@ body {
 }
 
 .subText span{
-    @apply text-white font-light;
+    @apply text-neutral-800 font-light;
 }
 
 .linkText{
@@ -61,9 +67,10 @@ body {
   @apply font-light;
 }
 footer {
-  @apply bg-[#111111] w-full h-auto py-8 px-4 text-center flex justify-center items-center text-white;
+  @apply bg-[#f3f3f3] w-full h-auto py-8 px-4 text-center flex justify-center items-center text-white;
   font-family: 'Kanit', sans-serif;
 }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
