--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -49,7 +49,7 @@
 /* RightNavbar ----------------------------------------------------------  */
 
 .rightnav {
-    @apply flex justify-end items-center w-60;  
+    @apply flex justify-end items-center w-32;  
 }
 
 /* .rightnav-form{
@@ -97,6 +97,10 @@
     animation: clickSearch 0.3s ease-in-out;
 } */
 
+.i-bulb:hover{
+    filter: drop-shadow(0px 9px 6px #ffffff);
+}
+
 .rightnav-li{
     @apply flex items-center gap-1 pl-2;
 }
@@ -106,20 +110,6 @@
     @apply border-white/40 rounded-full border-[0.2px] gap-2;
 }
 
-.rightnav-text{
-    @apply text-sm font-light tracking-wide text-white cursor-default drop-shadow-xl shadow-white;
-    filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
-}
-
-.rightnav-img{
-    @apply h-auto w-7 cursor-pointer opacity-40;
-    transition: all 0.2s ease;
-    filter: drop-shadow(0 0 3px rgba(255,255,255,0.2));
-}
-
-.rightnav-img:hover{
-    filter: drop-shadow(0 0 3px rgba(255,255,255,0.8));
-}
 
 .rightnav-lang{
     @apply flex justify-center items-center w-20 h-auto border-neutral-400 border-[0.6px] rounded-[15px] hover:border-white duration-200 cursor-pointer; 
@@ -131,12 +121,11 @@
     filter: drop-shadow(0 0 3px rgba(255,255,255,0.5));
 }
 
-@media (max-width: 768px) {
-    .main-nav ul{
-        @apply flex-col flex-wrap;
-        gap: 0 ;
-    }
-    .rightnav{
-        display: none;
-    }
+.main-nav ul{
+    @apply flex-col flex-wrap gap-0 md:flex-row md:flex-nowrap;
 }
+
+.rightnav{
+    @apply hidden md:block;
+}
+
