--- a/src/components/Learn/Learn.css
+++ b/src/components/Learn/Learn.css
@@ -3,5 +3,22 @@
 @tailwind utilities;
 
 .learn-container {
-    @apply h-[1300px] flex flex-col items-center justify-center;
+    @apply dark:bg-neutral-800 dark:text-white h-[1300px] pt-10 items-start justify-center bg-gradient-to-b from-[#e3e6e9] via-[#e9ecef] to-[#f6f6f6];
 }
+
+.title{
+    @apply w-full text-6xl m-2 text-neutral-700 p-3
+}
+
+.searchbar {
+    @apply dark:bg-neutral-800 dark:text-white bg-gray-700 mt-10 justify-items-end p-3 ;
+}
+
+/* .search-box {
+    @apply p-2 w-1/6 rounded-md;
+}
+
+.search-btn{
+    @apply px-4 py-2 ml-2 bg-gray-700 text-white rounded-md hover:bg-blue-600;
+} */
+
