--- a/src/components/Learn/Learn.css
+++ b/src/components/Learn/Learn.css
@@ -14,6 +14,9 @@
     @apply dark:bg-neutral-800 dark:text-white bg-gray-700 mt-10 justify-items-end p-3 ;
 }
 
+.animate__animated.animate__slideInUp {
+    animation-duration: 1s !important;
+}
 /* .search-box {
     @apply p-2 w-1/6 rounded-md;
 }
